<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".fragments.authentication.AuthFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/block_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/greeting"
            android:textColor="@color/white"
            android:textSize="31sp"
            app:layout_constraintBottom_toBottomOf="@id/textViewInstructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/instructions"
            android:textColor="#FAFAFA"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewGreeting">


        </androidx.appcompat.widget.AppCompatTextView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/block_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/block_1">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/email_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/instructions_name_text"
            android:textColor="#FAFAFA"
            android:textColorHint="@color/gray">

        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/email_height"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password_edit_text_hint"
            android:inputType="textPassword"
            android:textColor="#FAFAFA"
            android:textColorHint="@color/gray">


        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/remember_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:hint="@string/check_box_hint"
            android:textColorHint="@color/gray">
        </androidx.appcompat.widget.AppCompatCheckBox>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/block_3"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/block_2"
        >



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frame_register_button"
            android:text="@string/register_button_text"
            android:textColor="#FAFAFA"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/or_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="or"
            android:textColor="#FAFAFA"
            android:textSize="18sp"
            android:layout_gravity="center" />

        <view class="com.example.homework1.customview.CustomButton"
            android:id="@+id/button_custom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button__3_"
            android:text="@string/google" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/block_3"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:layout_marginEnd="12dp"
                android:text="@string/registered" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_label"
                android:textColor="@color/white"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>




</androidx.constraintlayout.widget.ConstraintLayout>