<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".presentation.ui.auth.AuthActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:textColor="@color/white"
        android:textSize="@dimen/heading_text"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/instructions"
        android:textColor="#FAFAFA"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewGreeting">


    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_edit_text"
        android:layout_width="0dp"
        android:layout_height="@dimen/email_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/instructions_name_text"
        android:textColor="#FAFAFA"
        android:textColorHint="@color/edit_text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInstructions"

        >

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_edit_text"
        android:layout_width="0dp"
        android:layout_height="@dimen/email_height"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/password_edit_text_hint"
        android:inputType="textPassword"
        android:textColor="#FAFAFA"
        android:textColorHint="@color/edit_text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text"

        >


    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/remember_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:hint="@string/check_box_hint"
        android:textColorHint="@color/edit_text_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text">


    </androidx.appcompat.widget.AppCompatCheckBox>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="or"
        android:textColor="#FAFAFA"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/buttonGoogle"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:background="@drawable/frame_register_button"
        android:text="@string/register_button_text"
        android:textColor="#FAFAFA"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/text_view_terms"
       >

    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/text_view_terms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/terms_text"
        android:gravity="center_horizontal"
        android:textColor="@color/edit_text_name"
        app:layout_constraintBottom_toTopOf="@id/bottom_items_layout"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
        android:id="@+id/bottom_items_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView

            android:id="@+id/text_view_for_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_registered_text"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/edit_text_name"
            android:layout_marginBottom="16dp">

        </androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginStart="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/sign_in_clickable_text"
            android:textColor="@color/white_for_text"
            android:clickable="true" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button__3_"
        android:text="@string/google"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintTop_toBottomOf="@id/remember_checkbox"
        app:layout_constraintVertical_chainStyle="packed"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/or_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        >


    </androidx.appcompat.widget.AppCompatButton>


</androidx.constraintlayout.widget.ConstraintLayout>