<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MiddleScreen"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"

        />
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorMainBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/MiddleScreen"

        />






        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="48dp"
            android:text="@string/settings"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:textColor="#FAFAFA"

            android:textSize="37sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_image"
            android:src="@drawable/ic_profile"
            app:layout_constraintBottom_toTopOf="@id/MiddleScreen"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"


            />








        <TextView
            android:id="@+id/profile_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image"

            android:text="@string/profile_name"

            android:textColor="@color/white"
            android:textSize="23sp"





            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_profile_text"
            android:textColor="@color/white"
            android:text="@string/job"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_name_text"



            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_profile_text"

            android:text="@string/adress"
            android:textColor="@color/white"
            android:textSize="14sp" />





        <ImageButton
            android:layout_width="wrap_content"
            android:id="@+id/facebook_button"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/MiddleScreen"
            app:layout_constraintBottom_toTopOf="@+id/edit_profile_button"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_facebook_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/linkedin_button"

            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/MiddleScreen"
            app:layout_constraintStart_toEndOf="@id/facebook_button"
            android:layout_marginStart="15dp"

            app:layout_constraintBottom_toTopOf="@+id/edit_profile_button"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_linkedin_button"
            android:id="@+id/linkedin_button"
            app:layout_constraintEnd_toStartOf="@+id/wk_button"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/MiddleScreen"
            app:layout_constraintBottom_toTopOf="@id/edit_profile_button"
            app:layout_constraintStart_toEndOf="@id/linkedin_button"
            android:layout_marginStart="15dp"
            android:id="@+id/wk_button"

            android:background="@android:color/transparent"
            android:src="@drawable/ic_wk_button"
            app:layout_constraintEnd_toEndOf="parent"
            />








       <androidx.appcompat.widget.AppCompatButton

           android:layout_width="0dp"
           android:layout_height="55dp"
           android:layout_marginEnd="16dp"
           android:layout_marginStart="16dp"
           android:textAllCaps="false"
           android:text="@string/edit_profile"
           android:id="@+id/edit_profile_button"
           android:background="@drawable/frame_edit_profile_button"
           app:layout_constraintBottom_toTopOf="@id/view_contacts_button"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginBottom="15dp"

           />
       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/view_contacts_button"
           android:layout_width="0dp"
           android:layout_height="55dp"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp"
           android:text="@string/view_my_contacts"
           android:textAllCaps="true"


           android:background="@color/view_contacts_button"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginBottom="15dp"/>
















</androidx.constraintlayout.widget.ConstraintLayout>