<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainProfileFragment">


    <View
        android:id="@+id/viewTopBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorMainBackground"
        app:layout_constraintBottom_toTopOf="@id/viewBottomBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/viewBottomBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/fragment_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTopBackground"


        />


    <TextView
        android:id="@+id/settings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:text="@string/settings"
        android:textColor="@color/white_for_text"
        android:textSize="37sp"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:shapeAppearanceOverlay="@style/rounded"
        app:layout_constraintBottom_toTopOf="@id/viewBottomBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView

        android:id="@+id/profile_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FAFAFA"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image"


        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/log_out_button"
        android:layout_width="@dimen/_119dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:background="@drawable/frame_log_out_button"
        android:text="@string/log_out_button_text"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >


    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/about_profile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job"
        android:textColor="@color/white_for_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_name_text"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adress"
        android:textColor="@color/white_for_text"
        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_profile_text" />


    <ImageButton
        android:id="@+id/facebook_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_facebook_button"
        app:layout_constraintBottom_toTopOf="@+id/edit_profile_button"
        app:layout_constraintEnd_toStartOf="@id/linkedin_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewBottomBackground"

        />

    <ImageButton
        android:id="@+id/linkedin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="@android:color/transparent"

        android:src="@drawable/ic_linkedin_button"
        app:layout_constraintBottom_toTopOf="@+id/edit_profile_button"
        app:layout_constraintEnd_toStartOf="@+id/wk_button"
        app:layout_constraintStart_toEndOf="@id/facebook_button"
        app:layout_constraintTop_toTopOf="@id/viewBottomBackground" />

    <ImageButton
        android:id="@+id/wk_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_wk_button"
        app:layout_constraintBottom_toTopOf="@id/edit_profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/linkedin_button"
        app:layout_constraintTop_toTopOf="@id/viewBottomBackground" />


    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/edit_profile_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/frame_edit_profile_button"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/view_contacts_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/view_contacts_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/frame_button_view_my_contacts"
        android:text="@string/view_my_contacts"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>